--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
-    "request": "^2.88.0"
+    "pdfkit": "^0.9.1",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4"
   }
 }
